<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ubuntu.messageme.ComposeMessageActivity">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_tv"
        android:layout_marginTop="12dp"
        android:background="#E0E0E0" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/to"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/contact_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="?android:attr/colorBackground"
        app:srcCompat="@drawable/ic_action_person" />

    <EditText
        android:id="@+id/msg_et"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_above="@+id/send_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/view"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/compose"
        android:inputType="textMultiLine"
        android:textSize="16sp">

    </EditText>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/send" />

</RelativeLayout>
